Fix crash when entering WebVR presentation

The issue here is that viewports_need_updating_ is uninitialized until
OnResume, and that leaves viewports uninitialized until the first
DrawFrame after OnResume.

However, some incoming calls from mojo, such as UpdateLayerBounds may
be processed before that first DrawFrame.

The fix is to initialize viewports_need_updating_ to true, so viewports
are created in InitializeRenderer, before mojo calls are processed.

This then creates a new bug, where we lose the UVs set by a call to
UpdateLayerBounds before the first OnResume/DrawFrame. We need to cache
the bounds and can reapply them when creating new viewports.

BUG=839108

Change-Id: Ieef7f98d9606fe033095e8b8a8e9cde92afdcccc
Reviewed-on: https://chromium-review.googlesource.com/1062930
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559346}
Former-commit-id: 46304c60d3cf7b64ba57cc1cc73f4dc0745df7bc